--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 links
 
-uvicorn app.api:app --relaod --host "0.0.0.0" --port 8020
+uvicorn app.api:app --host "0.0.0.0" --port 8020
 
 pip install -r requirements.txt
 
